Fix T63326: absolute shape keys inserted from Python in wrong order.